updated feeling sections with an id for each feeling

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <div id="feeling" class="box is-align-self-center p-6 mx-3">
                     <div class="subtitle is-4">How Are You Feeling Today</div>
                     <div class="buttons are-large">
-                    <button class="angry button is-medium is-fullwidth">Angry</button>
-                    <button class="happy button is-medium is-fullwidth">Happy</button>
-                    <button class="sad button is-medium is-fullwidth">Sad</button>
-                    <button class="calm button is-medium is-fullwidth">Calm</button>
+                    <button id="angry" class="angry button is-medium is-fullwidth">Angry</button>
+                    <button id="happy" class="happy button is-medium is-fullwidth">Happy</button>
+                    <button id="sad" class="sad button is-medium is-fullwidth">Sad</button>
+                    <button id="calm" class="calm button is-medium is-fullwidth">Calm</button>
                     </div>  
                 </div>
                 <div id="suggestions" class="image is-align-self-center p-6">
