updated html with class for weather and feeling buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
         <section class="container">
             <div class="columns is-flex-wrap is-justify-content-space-evenly">
-                <div id="weather" class="box is-align-self-center mx-2 p-6">
+                <div id="weather" class="on-click box is-align-self-center mx-2 p-6">
                     <div class="subtitle is-4">What is the Weather Like?</div>
                     <div class="buttons are-large">
                     <button class="sunny button is-medium is-fullwidth">☀️</button>
@@ -35,7 +35,7 @@
                     <button class="snowing button is-medium is-fullwidth">❄️</button>
                     </div>  
                 </div>
-                <div id="feeling" class="box is-align-self-center p-6 mx-3">
+                <div id="feeling" class="on-click box is-align-self-center p-6 mx-3">
                     <div class="subtitle is-4">How Are You Feeling Today</div>
                     <div class="buttons are-large">
                     <button id="angry" class="angry button is-medium is-fullwidth">Angry</button>
@@ -83,5 +83,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!-- Script JS File -->
     <script src="Assets/JS/script.js"></script>
+    <!-- Sad API JS File -->
+    <script src="Assets/JS/sad-api.js"></script>
 </body>
 </html>
