added GIF.js file with eventListeners functions attached to emotion buttons to generate GIFS from giphy

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="subtitle is-3">Suggestions For You
                     <div class="suggestions">
                         <figure class="image">
-                            <img src="Assets/images/suggestions.jpeg">
+                            <img id="content" src="Assets/images/suggestions.jpeg">
                         </figure>
                     </div>
                     </div>
@@ -71,7 +71,7 @@
                 <a href="https://github.com/Chabivz" target="_blank">
                     Chris Abiva</a>,
                 <a href="https://github.com/mohamedB-01"target="_blank">
-                    Mohamed Bassioun</a>,
+                    Mohamed Bassiouni</a>,
                 <a href="https://github.com/twashke" target="_blank">
                     Tiffany Washke</a>.<br>
             </p>
@@ -83,5 +83,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!-- Script JS File -->
     <script src="Assets/JS/script.js"></script>
+    <script src="./GIF.js"></script>
 </body>
 </html>
