--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <div id="weather" class="on-click box is-align-self-center mx-2 p-6">
                     <div class="subtitle is-4">What is the Weather Like?</div>
                     <div class="buttons are-large">
-                    <button class="sunny button is-medium is-fullwidth">☀️</button>
-                    <button class="cloudy button is-medium is-fullwidth">☁️</button>
-                    <button class="raining button is-medium is-fullwidth">☔️</button>
-                    <button class="snowing button is-medium is-fullwidth">❄️</button>
+                    <button id="sunny" class="sunny button is-medium is-fullwidth">☀️</button>
+                    <button id="cloudy" class="cloudy button is-medium is-fullwidth">☁️</button>
+                    <button id="raining" class="raining button is-medium is-fullwidth">☔️</button>
+                    <button id="snowing" class="snowing button is-medium is-fullwidth">❄️</button>
                     </div>  
                 </div>
                 <div id="feeling" class="on-click box is-align-self-center p-6 mx-3">
