added id content in sugestions in the <img>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="subtitle is-3">Suggestions For You
                     <div class="suggestions">
                         <figure class="image">
-                            <img src="Assets/images/suggestions.jpeg">
+                            <img id="content" src="Assets/images/suggestions.jpeg">
                         </figure>
                     </div>
                     </div>
