--- a/index.html
+++ b/index.html
@@ -48,13 +48,26 @@
                     <div class="subtitle is-3">Suggestions For You
                     <div class="suggestions">
                         <figure class="image">
-                            <img id="content" src="Assets/images/suggestions.jpeg">
+                            <img src="Assets/images/suggestions.jpeg">
                         </figure>
-                    </div>
-                    </div>
-                </div>
-            </div>
-            </div>
+                        <div class="modal">
+                            <div class="modal-background"></div>
+                            <div class="modal-card">
+                                <header class="modal-card-head">
+                                <p class="modal-card-title">Suggestions for You</p>
+                                <button class="modal-close" aria-label="close"></button>
+                                </header>
+                                <section class="modal-card-body">
+                                    <div id="content">
+                                        <img class="src alt" src="" alt=""> 
+                                        <h3 class="text-one"></h3>
+                                        <h4 class="text-two"></h4>
+                                    </div>
+                                </section>
+                                <footer class="modal-card-foot">
+                            </footer>
+                            </div>
+                        </div>
         </section>
         <section>
             <div id="past-history">
