updated sad javascript file

--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
                                 <button class="modal-close" aria-label="close"></button>
                                 </header>
                                 <section class="modal-card-body">
-                                    <div id="content">
-                                        <img class="src alt" src="" alt=""> 
-                                        <h3 class="text-one"></h3>
-                                        <h4 class="text-two"></h4>
-                                    </div>
+                                    <div id="content"></div>
                                 </section>
                                 <footer class="modal-card-foot">
                             </footer>
