--- a/index.html
+++ b/index.html
@@ -59,9 +59,6 @@
                                 </header>
                                 <section class="modal-card-body">
                                     <div id="content">
-                                        <img class="src alt" src="" alt=""> 
-                                        <h3 class="text-one"></h3>
-                                        <h4 class="text-two"></h4>
                                     </div>
                                 </section>
                                 <footer class="modal-card-foot">
@@ -97,6 +94,6 @@
     <!-- Script JS File -->
     <script src="Assets/JS/script.js"></script>
     <!-- Sad API JS File -->
-    <script src="Assets/JS/sad-api.js"></script>
+    <script src="Assets/JS/sad.js"></script>
 </body>
 </html>
