added next button on modal

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                                     <div id="content"></div>
                                 </section>
                                 <footer class="modal-card-foot">
+                                    <button id="next" class="button">Next</button>
                             </footer>
                             </div>
                         </div>
