Still Working on Universal Next Button.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <figure class="image">
                             <img src="Assets/images/suggestions.jpeg">
                         </figure> -->
-                        <div class="modal">
+                        <div id="modal" class="modal">
                             <div class="modal-background"></div>
                             <div class="modal-card">
                                 <header class="modal-card-head cbw-card-header">
