Revert "added responses.js with adjusted nextBtn function, added h3 and h4 pl…"

--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
                                 <button class="modal-close" aria-label="close"></button>
                                 </header>
                                 <section class="modal-card-body">
-                                    <div id="content">
-                                        <img id="GIF" src="" alt="">
-                                        <h3 id="bodyqoute"></h3>
-                                        <h4 id="author"></h4>
-                                    </div>
+                                    <div id="content"></div>
                                 </section>
                                 <footer class="modal-card-foot">
                                     <button id="next" class="button">Next</button>
@@ -98,10 +94,8 @@
     <!-- Script JS File -->
     <script src="Assets/JS/script.js"></script>
     <!--  GIF-APi-feature -->
-    <!--script src="./GIF.js"></script-->
+    <script src="./GIF.js"></script>
     <!-- Sad API JS File -->
-    <!--script src="Assets/JS/sad.js"></script-->
-    <script src="./Assets/JS/emoresponse.js"></script>
-        
+    <script src="Assets/JS/sad.js"></script>
 </body>
 </html>
