--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <figure class="image">
                             <img src="Assets/images/suggestions.jpeg">
                         </figure> -->
-                        <div id="modal" class="modal">
+                        <div class="modal">
                             <div class="modal-background"></div>
                             <div class="modal-card">
                                 <header class="modal-card-head cbw-card-header">
@@ -63,7 +63,6 @@
                                     <div id="content"></div>
                                 </section>
                                 <footer class="modal-card-foot">
-                                    <!-- <button id="next" class="button is-primary is-medium is-fullwidth">Next</button> -->
                                     <a href="#" id="next" class="card-footer-item cbw-card-footer is-size-4">Next</a>
                             </footer>
                             </div>
