Updating Local Storage File and History HTML

--- a/history.html
+++ b/history.html
@@ -15,7 +15,24 @@
     <!-- <link rel="stylesheet" href="Assets/CSS/debug.css"> -->
     <title>A look back into the past...</title>
 </head>
-<body>
+<body class="container is-widescreen">
     <h1>A look back into the past...</h1>
+    <main >
+        <table id="mood-history" class="table container is-widescreen is-bordered">
+            <tr>
+                <th>ID</th>
+                <th>Date</th>
+                <th>Mood</th>
+                <th>Weather</th>
+            </tr>
+            
+        </table>
+    </main>
+
+    <!-- JQuery Source -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Moment.js Source -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./Assets/JS/local-storage-set.js"></script>
 </body>
 </html>
