updated next button and removed from functions

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
                     <div class="subtitle is-4 has-text-weight-semibold">STEP 1:</div>
                     <div class="subtitle is-4">What is the Weather Like Outside?</div>
                     <div class="buttons are-large">
-                    <button id="sunny" class="sunny button is-medium is-fullwidth">☀️</button>
-                    <button id="cloudy" class="cloudy button is-medium is-fullwidth">☁️</button>
-                    <button id="raining" class="raining button is-medium is-fullwidth">☔️</button>
-                    <button id="snowing" class="snowing button is-medium is-fullwidth">❄️</button>
+                    <button id="sunny" class="weather-button sunny button is-medium is-fullwidth">☀️</button>
+                    <button id="cloudy" class="weather-button cloudy button is-medium is-fullwidth">☁️</button>
+                    <button id="raining" class="weather-button raining button is-medium is-fullwidth">☔️</button>
+                    <button id="snowing" class="weather-button snowing button is-medium is-fullwidth">❄️</button>
                     </div>  
                 </div>
                 <div id="feeling" class="on-click box is-align-self-center mx-2 p-6">
                     <div class="subtitle is-4 has-text-weight-semibold">STEP 2:</div>
                     <div class="subtitle is-4">How Are You Feeling Today?</div>
                     <div class="buttons are-large">
-                    <button id="angry" class="angry button is-medium is-fullwidth">Angry</button>
-                    <button id="happy" class="happy button is-medium is-fullwidth">Happy</button>
-                    <button id="sad" class="sad button is-medium is-fullwidth">Sad</button>
-                    <button id="calm" class="calm button is-medium is-fullwidth">Calm</button>
+                    <button id="angry" class="feeling-button angry button is-medium is-fullwidth">Angry</button>
+                    <button id="happy" class="feeling-button happy button is-medium is-fullwidth">Happy</button>
+                    <button id="sad" class="feeling-button sad button is-medium is-fullwidth">Sad</button>
+                    <button id="calm" class="feeling-button calm button is-medium is-fullwidth">Calm</button>
                     </div>  
                 </div>
                 <div id="suggestions" class="image is-align-self-center mx-2 mb-4 p-4">
@@ -97,6 +97,8 @@
     <script src="Assets/JS/script.js"></script>
     <!-- local storage JS file -->
     <script src="Assets/JS/local-storage-set.js"></script>
+    <!-- <script src="Assets/JS/sad.js"></script> -->
+    <script src="./Assets/JS/local-storage-set.js"></script>
     <!-- All API Scripts JS File-->
     <script src="Assets/JS/all-api-scripts.js"></script>
 </body>
