added buttons for back and clear as well as functions to support them

--- a/history.html
+++ b/history.html
@@ -17,7 +17,7 @@
 </head>
 <body class="container is-widescreen">
     <h1>A look back into the past...</h1>
-    <main >
+    <main>
         <table id="mood-history" class="table container is-widescreen is-bordered">
             <tr>
                 <th>ID</th>
@@ -25,14 +25,18 @@
                 <th>Mood</th>
                 <th>Weather</th>
             </tr>
-            
         </table>
+            <!-- Button Section -->
+            <div class="has-text-centered">
+                <button class="button is-medium mx-3" id="go-back">Go Back</button>
+                <button class="button is-medium mx-3" id="clear-data">Clear</button>
+            </div>
     </main>
 
     <!-- JQuery Source -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Moment.js Source -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./Assets/JS/local-storage-set.js"></script>
+    <script src="Assets/JS/local-storage-set.js"></script>
 </body>
 </html>
