updated modal GIFs to change src instead of appending

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                                 </header>
                                 <section class="modal-card-body is-size-4">
                                     <div id="content"></div>
+                                    <img id="GIF" src="" alt="">
+                                        <h3 id="bodyquote"></h3>
+                                        <h4 id="author"></h4>
                                 </section>
                                 <footer class="modal-card-foot">
                                     <a href="#" id="next" class="card-footer-item cbw-card-footer is-size-4">Next</a>
