Took out _target on History Button, fixed goBackFunction on localStorage

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </section>
         <section>
             <div id="past-history">
-                <h2><a href="history.html" target="_blank" ><span class="tag is-light is-large">
+                <h2><a href="history.html" ><span class="tag is-light is-large">
                     A look back into the past...</span></a>
             </div>
         </section>
