--- a/history.html
+++ b/history.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="history">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
     <!-- <link rel="stylesheet" href="Assets/CSS/debug.css"> -->
     <title>A look back into the past...</title>
 </head>
-<body class="container is-widescreen">
+<body class="container is-widescreen bounce-in-top ">
     <h1>A look back into the past...</h1>
     <main>
         <table id="mood-history" class="table container is-widescreen is-bordered">
