--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bulma CSS Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-    <!-- Google Font Link -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
-    <!-- CSS Style Link -->
     <link rel="stylesheet" href="Assets/CSS/style.css">
-    <!-- Debugger -->
-    <!-- <link rel="stylesheet" href="Assets/CSS/debug.css"> -->
     <title>Mood Tracker</title>
 </head>
 <body>
@@ -47,8 +42,8 @@
                     </div>  
                 </div>
                 <div id="suggestions" class="image is-align-self-center mx-1 mb-4 p-2">
-                    <div class="subtitle is-3 pt-1"><h4>Suggestions For You</h4>
-                    <div class="suggestions" style="width: 640px; height: 360px;">
+                    <div class="subtitle is-3 pt-1"><h2>Suggestions For You</h2>
+                    <div class="suggestions mt-3" style="width: 640px; height: 360px;">
                         <figure class="image is-16by9">
                             <img src="Assets/images/suggestions.jpeg" alt="Kids looking in the aquarium">
                         </figure>
@@ -73,10 +68,8 @@
         </section>
         <section>
             <div id="past-history">
-              
-                <h2><a href="history.html" ><span class="tag is-light is-large">
-                  
-                    A look back into the past...</span></a>
+                <h6><a href="history.html" ><span class="tag is-light is-large">
+                    A look back into the past...</span></a></h6>
             </div>
         </section>
     <footer class="footer">
@@ -94,15 +87,10 @@
             </p>
         </div>
     </footer>
-    <!-- JQuery Source -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- Moment.js Source -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <!-- Script JS File -->
     <script src="Assets/JS/script.js"></script>
-    <!-- local storage JS file -->
     <script src="Assets/JS/local-storage-set.js"></script>
-    <!-- All API Scripts JS File-->
     <script src="Assets/JS/all-api-scripts.js"></script>
 </body>
 </html>
