changed suggestions to h5 since time in title is currently h2 (this was causing issues when using the function to change the text when clciking on the weather

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>  
                 </div>
                 <div id="suggestions" class="image is-align-self-center mx-1 mb-4 p-2">
-                    <div class="subtitle is-3 pt-1"><h2>Suggestions For You</h2>
+                    <div class="subtitle is-3 pt-1"><h5 class="title">Suggestions For You</h5>
                     <div class="suggestions mt-3" style="width: 640px; height: 360px;">
                         <figure class="image is-16by9">
                             <img src="Assets/images/suggestions.jpeg" alt="Kids looking in the aquarium">
