Adding Animation CSS on HTMLS

--- a/history.html
+++ b/history.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Assets/CSS/style.css">
+    <link rel="stylesheet" href="Assets/CSS/animation.css">
     <title>A look back into the past...</title>
 </head>
-<body class="container is-widescreen bounce-in-top ">
+<body class="bounce-in-top  container is-widescreen bounce-in-top ">
     <h1>A look back into the past...</h1>
     <main>
         <table id="mood-history" class="table container is-widescreen is-bordered">
